[workspace]
members = [ "common", "trie_diff", "trie_query", "trie_stats" ]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.6", features = ["derive", "env"] }

# TODO: Replace with just a semver number once the fix gets merged back into `main`...
mpt_trie = { version = "0.2.0", git = "https://github.com/0xPolygonZero/zk_evm.git", rev = "acde8397b5be2c20f60649578159a21a4da325b4" }
pretty_env_logger = "0.5.0"

# TODO: Replace with just a semver number once the fix gets merged back into `main`...
trace_decoder = { version = "0.2.0", git = "https://github.com/0xPolygonZero/zk_evm.git", rev = "acde8397b5be2c20f60649578159a21a4da325b4" }
serde_json = "1.0.114"
