[workspace]
members = [ "common", "trie_diff", "trie_query", "trie_stats" ]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.6", features = ["derive", "env"] }
mpt_trie = "0.3.0"
pretty_env_logger = "0.5.0"
trace_decoder = "0.4.0"
serde_json = "1.0.114"
