[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth_trie_utils = { workspace = true }
hex = "0.4.3"
protocol_decoder = { workspace = true }
serde_json = { workspace = true }
