[package]
name = "trie_diff"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
eth_trie_utils = "0.6.0"
ethereum-types = "0.14.1"
hex = "0.4.3"
pretty_env_logger = "0.5.0"
protocol_decoder = { git = "https://github.com/0xPolygonZero/proof-protocol-decoder.git", rev = "e0e9338366afe687f22ba0ab9532eb28f326f4b4" }
serde_json = "1.0.111"
