[package]
name = "trie_diff"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

anyhow = { workspace = true }
clap = { workspace = true }
mpt_trie ={ workspace = true }
ethereum-types = "0.14.1"
pretty_env_logger = { workspace = true }
trace_decoder = { workspace = true }
serde_json = { workspace = true }
