[package]
name = "trie_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

anyhow = { workspace = true }
clap = { workspace = true }
mpt_trie ={ workspace = true }
pretty_env_logger = { workspace = true }
